# metro_disruptions_intelligence

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Data_Dictionary.xlsx  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  DOCS.yml  FEATURE-REQUEST.yml
.github/workflows/: commit-ci.yml  daily-scheduled-ci.yml  docs.yml  pr-ci.yml  release.yml
config/: default.yaml
configs/: iforest_default.yaml  iforest_grid.yaml
data/: README.md
data/RAIL_RT_ALERTS/RAIL_RT_ALERTS/: sample_alert.json
data/raw_test/: sample_trip_update.json  sample_vehicle_position.json
docs/: anomaly_detection.md  contributing.md  feature_engineering.md  installation.md  realtime_ingestion.md
docs/api/: cli.md
examples/: 1_intro_to_metro_disruptions_intelligence.ipynb
notebooks/: 00_etl_smoke_test.ipynb  01_full_ingest.ipynb  01_ingest_full_rt.ipynb  01_process_all_rt.ipynb  02_exploratory_analysis.ipynb  03_generate_features_and_eda.ipynb  04_run_anomaly_detection.ipynb  iforest_best.yaml  iforest_model.pkl  iforest_model_final.pkl  run_anomaly_detection.ipynb
notebooks/data/working_data/: tuning_results.csv
requirements/: base.txt
sample_data/: test_parquet.csv  verify_features.py
sample_data/processed_sample/: station_event.parquet  station_schedule.parquet
sample_data/rt/alerts/year=2025/month=03/day=06/: alerts_2025-06-03-17-02.parquet  alerts_2025-06-03-17-18.parquet  alerts_2025-06-03-18-29.parquet  alerts_2025-06-03-18-32.parquet  alerts_2025-06-03-18-34.parquet  alerts_2025-06-03-18-35.parquet  alerts_2025-06-03-18-50.parquet  alerts_2025-06-03-18-54.parquet  alerts_2025-06-03-18-57.parquet  alerts_2025-06-03-19-00.parquet  alerts_2025-06-03-19-02.parquet  alerts_2025-06-03-19-03.parquet  alerts_2025-06-03-19-19.parquet  alerts_2025-06-03-19-21.parquet  alerts_2025-06-03-19-30.parquet  alerts_2025-06-03-19-35.parquet  alerts_2025-06-03-19-38.parquet  alerts_2025-06-03-19-43.parquet  alerts_2025-06-03-19-44.parquet  alerts_2025-06-03-19-52.parquet  alerts_2025-06-03-19-57.parquet  alerts_2025-06-03-20-01.parquet  alerts_2025-06-03-20-16.parquet  alerts_2025-06-03-20-18.parquet  alerts_2025-06-03-20-20.parquet  alerts_2025-06-03-20-23.parquet  alerts_2025-06-03-20-42.parquet  alerts_2025-06-03-20-46.parquet  alerts_2025-06-03-20-47.parquet  alerts_2025-06-03-20-56.parquet  alerts_2025-06-03-21-15.parquet  alerts_2025-06-03-21-18.parquet  alerts_2025-06-03-21-37.parquet  alerts_2025-06-03-21-38.parquet  alerts_2025-06-03-21-44.parquet  alerts_2025-06-03-21-53.parquet  alerts_2025-06-03-21-54.parquet  alerts_2025-06-03-21-59.parquet  alerts_2025-06-03-22-04.parquet  alerts_2025-06-03-22-13.parquet  (+8 more)
sample_data/rt/alerts/year=2025/month=03/day=07/: alerts_2025-07-03-00-05.parquet  alerts_2025-07-03-00-06.parquet  alerts_2025-07-03-00-07.parquet  alerts_2025-07-03-00-09.parquet  alerts_2025-07-03-00-11.parquet  alerts_2025-07-03-00-17.parquet  alerts_2025-07-03-00-18.parquet  alerts_2025-07-03-00-21.parquet  alerts_2025-07-03-00-26.parquet  alerts_2025-07-03-00-30.parquet  alerts_2025-07-03-00-31.parquet  alerts_2025-07-03-00-34.parquet  alerts_2025-07-03-00-36.parquet  alerts_2025-07-03-00-37.parquet  alerts_2025-07-03-00-39.parquet  alerts_2025-07-03-00-42.parquet  alerts_2025-07-03-00-44.parquet  alerts_2025-07-03-00-47.parquet  alerts_2025-07-03-00-48.parquet  alerts_2025-07-03-00-51.parquet  alerts_2025-07-03-00-52.parquet  alerts_2025-07-03-00-55.parquet  alerts_2025-07-03-00-56.parquet  alerts_2025-07-03-00-59.parquet  alerts_2025-07-03-01-02.parquet  alerts_2025-07-03-01-03.parquet  alerts_2025-07-03-01-05.parquet  alerts_2025-07-03-01-08.parquet  alerts_2025-07-03-01-12.parquet  alerts_2025-07-03-01-16.parquet  alerts_2025-07-03-01-22.parquet  alerts_2025-07-03-01-26.parquet  alerts_2025-07-03-01-28.parquet  alerts_2025-07-03-01-34.parquet  (+235 more)
sample_data/rt_parquet/: verification_report.csv
sample_data/static/: agency.txt  calendar.txt  feed_info.txt  notes.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
src/metro_disruptions_intelligence/: __init__.py  cli.py  core.py  data_loader.py  evaluation.py  features.py  processed_reader.py  utils_gtfsrt.py
src/metro_disruptions_intelligence/detect/: __init__.py  shap_utils.py  streaming_iforest.py  tune_iforest.py
src/metro_disruptions_intelligence/etl/: __init__.py  fetch_static_v2.py  ingest_rt.py  parse_alerts.py  parse_trip_updates.py  parse_vehicle_positions.py  replay_stream.py  static_ingest.py  write_parquet.py
tests/: conftest.py  test_cli.py  test_compose_path_partitions.py  test_core.py  test_data_loader.py  test_date_format.py  test_detect.py  test_duplicate_trip.py  test_evaluation.py  test_features.py  test_fetch_static_v2.py  test_filename_vs_epoch_offset.py  test_header_only_pipeline.py  test_latency.py  test_parquet_delay_quality.py  test_parse_args.py  test_parse_empty_rt.py  test_parse_header_only_rt.py  test_partial_gap.py  test_processed_reader.py  test_replay_stream.py  test_rt_ingest.py  test_snapshot_discovery.py  test_static_ingest.py  test_try_parse_timezone.py  test_union_streaming.py  test_write_parquet.py
(+8301 files in other folders)
